# error-codegen-poc

./: ARCHITECTURE.md  Cargo.toml  README.md  errors-core-1.json  errors-core-2.json  errors-core-3.json  errors-core-3.toml  example-2.json  example-core-3.toml  example.json  example.toml  zksync-root.json
crates/zksync-error-codegen/: Cargo.toml
crates/zksync-error-codegen-cli/: Cargo.toml
crates/zksync-error-codegen-cli/src/: main.rs
crates/zksync-error-codegen-cli/src/arguments/: backend.rs  conversion.rs  mod.rs
crates/zksync-error-codegen/doc_templates/mdbook/: book.toml  domain.md  error.md
crates/zksync-error-codegen/src/: arguments.rs  description.rs  error.rs  lib.rs
crates/zksync-error-codegen/src/codegen/: file.rs  mod.rs
crates/zksync-error-codegen/src/codegen/mdbook/: error.rs
crates/zksync-error-codegen/src/codegen/rust/: config.rs  error.rs  mod.rs
crates/zksync-error-codegen/src/codegen/rust/files/: cargo.rs  documentation.rs  identifier.rs  kind.rs  lib.rs  mod.rs  packed.rs  serialized.rs  untyped.rs
crates/zksync-error-codegen/src/codegen/rust/files/error/: definitions.rs  domains.rs  mod_file.rs
crates/zksync-error-codegen/src/codegen/rust/util/: codegen.rs  mod.rs
crates/zksync-error-codegen/src/loader/: cargo.rs  error.rs  link.rs  mod.rs
crates/zksync-error-codegen/src/loader/builder/: context.rs  error.rs  mod.rs
crates/zksync-error-codegen/src/loader/resolution/: error.rs  mod.rs
crates/zksync-error-description/: Cargo.toml
crates/zksync-error-description/src/: identifier.rs
crates/zksync-error-description/src/model/: mod.rs
crates/zksync-error-model/: Cargo.toml
crates/zksync-error-model/src/: error.rs
crates/zksync-error-model/src/inner/: mod.rs
crates/zksync-error-model/src/merger/: error.rs  mod.rs
crates/zksync-error-model/src/unpacked/: mod.rs
example-output/doc/: index.html
example-output/doc/compiler/zksolc/: FileNotFound.html  SolcNotFound.html  Umbrella.html
example-output/doc/core/Sequencer/: AnotherErrorDefinedExternally.html  ErrorDefinedExternally.html  OtherCoreError.html  SomeCoreError.html
example-output/zksync-error/src/: identifier.rs
example-output/zksync-error/src/error/: definitions.rs  domains.rs
zksync-error-codegen/: Cargo.toml
zksync-error-codegen-cli/: Cargo.toml
zksync-error-codegen-cli/src/: arguments.rs  error.rs  main.rs
zksync-error-codegen/doc_templates/: error.html  index.html
zksync-error-codegen/doc_templates/html/: error.html
zksync-error-codegen/doc_templates/mdbook/: SUMMARY.md  component.md
zksync-error-codegen/src/: arguments.rs  description.rs  error.rs  error_database.rs  json.rs  lib.rs  loader.rs
zksync-error-codegen/src/codegen/: file.rs  mod.rs  printer.rs
zksync-error-codegen/src/codegen/html/: config.rs  error.rs  mod.rs
zksync-error-codegen/src/codegen/mdbook/: config.rs  mod.rs
zksync-error-codegen/src/codegen/printer/: indent.rs  mod.rs
zksync-error-codegen/src/codegen/rust/: config.rs  error.rs  mod.rs
zksync-error-codegen/src/codegen/rust/files/: documentation.rs  identifier.rs  kind.rs  lib.rs  mod.rs  packed.rs  serialized.rs  untyped.rs
zksync-error-codegen/src/codegen/rust/files/error/: definitions.rs  domains.rs  mod.rs  mod_file.rs
zksync-error-codegen/src/loader/: cargo.rs  error.rs  fetch.rs  link.rs  mod.rs
zksync-error-codegen/src/loader/builder/: error.rs  mod.rs
zksync-error-codegen/src/model/: error.rs  loader.rs  mod.rs  scratch.rs  validator.rs
zksync-error-codegen/src/model/builder/: error.rs  mod.rs
zksync-error-codegen/src/model/merger/: error.rs  mod.rs
zksync-error-codegen/src/model/structure/: identifier.rs  mod.rs
zksync-error-codegen/src/model/structure/flattened/: mod.rs
zksync-error-common/: Cargo.toml
zksync-error-common/src/: identifier.rs  kind.rs
zksync-error-common/src/error/: domains.rs
zksync-error-description/: Cargo.toml
zksync-error-description/src/: lib.rs
zksync-error-description/src/adapter/: mod.rs
zksync-error-description/src/model/: mod.rs
zksync-error-model/: Cargo.toml
zksync-error-model/src/: error.rs  identifier.rs  lib.rs  validator.rs
zksync-error-model/src/flattened/: mod.rs
zksync-error-model/src/inner/: mod.rs
zksync-error-model/src/merger/: mod.rs
zksync-error-model/src/structure/: mod.rs
zksync-error-model/src/structure/flattened/: mod.rs
zksync-error-model/src/unpacked/: mod.rs
zksync-error/src/: kind.rs
zksync-error/src/error/: mod.rs
