[package]
name = "zksync-error-codegen-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "=1.0.210", features = [ "derive" ] }
serde_json = { version = "=1.0.128" }
structopt = { version = "=0.3.26", default-features = false }
vector-map = "1.0.1"

zksync-error-codegen = {path = "../zksync-error-codegen" }
