[package]
name = "zksync-error-codegen"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
include_dir = "0.7.4"
maplit = "1.0.2"
reqwest = { version = "0.12.9", features = [ "blocking" ] }
serde = { version = "=1.0.210", features = [ "derive" ] }
serde_json = { version = "=1.0.128" }
tera = "1.20.0"
