[package]
name = "zksync-error-common"
version = "0.1.0"
edition = "2021"

authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "=1.0.210", features = [ "derive" ] }
serde_json = { version = "=1.0.128"}
strum = "0.26.3"
strum_macros = "0.26.4"
typify = "0.2.0"
