[package]
name = "zksync-error-codegen-cli"
description = "CLI for zksync-error-codegen"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]

#########################
# External dependencies #
#########################

clap.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
vector-map.workspace = true

#########################
# Local dependencies    #
#########################

zksync-error-codegen.workspace = true
