[package]
name = "zksync-error-codegen"
description = "generate Rust, Typescript code to describe and handle errors and Markdown documentation for them."
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]

#########################
# External dependencies #
#########################

cargo_metadata.workspace = true
include_dir.workspace = true
maplit.workspace = true
rustfmt-wrapper.workspace = true
quote.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = [ "rc" ] }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
syn.workspace = true
tera.workspace = true
thiserror.workspace = true
vector-map.workspace = true


#########################
# Local dependencies    #
#########################

zksync-error-model.workspace = true
zksync-error-description.workspace = true
proc-macro2 = "1.0.93"
